--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 		<repository>
 			<id>anypoint-exchange-v3</id>
 			<name>Anypoint Exchange</name>
-			<url>https://maven.anypoint.mulesoft.com/api/v3/maven</url>
+			<url>https://maven.anypoint.mulesoft.com/api/b8d4946b-98ba-478e-8777-2b7fc40e1cfc/v3/maven</url>
 			<layout>default</layout>
 		</repository>
 		<repository>
