--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com/</uri>
 						<muleVersion>4.9-e-java17</muleVersion>
+						<server>Repository</server>
 						<applicationName>poc-users-cicd-4</applicationName>
 						<region>us-east-1</region>
 						<environment>Sandbox</environment>
