--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,9 @@
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com/</uri>
 						<muleVersion>4.9-e-java17</muleVersion>
-						<server>anypoint-exchange-v3</server>
+						<connectedAppClientId>076e6f6b0c964d7c8fe260d490f67dac</connectedAppClientId>
+						<connectedAppClientSecret>02Ee884E2ef04B518E496173CD19264f</connectedAppClientSecret>
+						<connectedAppGrantType>client_credentials</connectedAppGrantType>
 						<applicationName>poc-users-cicd-4</applicationName>
 						<region>us-east-1</region>
 						<environment>Sandbox</environment>
